task 2 fully and parallel stream Api example